--- a/app/src/main/res/layout/activity_manager_staff_portal.xml
+++ b/app/src/main/res/layout/activity_manager_staff_portal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,7 +70,7 @@
                     android:layout_width="397dp"
                     android:layout_height="50dp"
                     android:textAlignment="center"
-                    android:textSize="28sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     tools:text="User Name (Manager)" />
 
