--- a/app/src/main/res/layout/activity_check_room_occupancy.xml
+++ b/app/src/main/res/layout/activity_check_room_occupancy.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -85,7 +85,7 @@
                         android:textSize="15sp" />
 
                     <Spinner
-                        android:id="@+id/ddlRoomType"
+                        android:id="@+id/roomType"
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:background="@android:drawable/btn_dropdown"
