--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -88,7 +88,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtName"
+                        android:id="@+id/txtEmail"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -118,34 +118,23 @@
                         android:textAlignment="textStart"
                         android:textSize="15sp" />
 
-                    <RadioGroup
-                        android:id="@+id/staffRole"
+                    <EditText
+                        android:id="@+id/txtRole"
                         android:layout_width="380dp"
-                        android:layout_height="match_parent">
-
-                        <RadioButton
-                            android:id="@+id/Manager"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Manager"
-                            android:textSize="15sp" />
-
-                        <RadioButton
-                            android:id="@+id/Staff"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Normal Staff"
-                            android:textSize="15sp" />
-
-                    </RadioGroup>
+                        android:layout_height="wrap_content"
+                        android:autofillHints=""
+                        android:ems="10"
+                        android:inputType="textLongMessage|textPersonName"
+                        android:labelFor="@id/TextView8"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text=""
+                        android:textColor="#939191"
+                        android:textColorHighlight="#6DFFFFFF"
+                        android:textIsSelectable="false"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/textView4"
@@ -162,7 +151,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtPhone"
+                        android:id="@+id/txtName"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -222,7 +211,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtNumOfPeople"
+                        android:id="@+id/txtPassword"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -278,7 +267,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffphone"
+                        android:id="@+id/txtPhone"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
