--- a/app/src/main/res/layout/activity_check_in_details.xml
+++ b/app/src/main/res/layout/activity_check_in_details.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -58,7 +58,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="437dp">
+                    android:layout_height="500dp">
 
                     <TextView
                         android:id="@+id/txtBookingID"
@@ -164,6 +164,8 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/txtNoOfRoom"
                         tools:text="Room Status" />
+
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
