--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -113,6 +113,17 @@
                         android:paddingLeft="20dp" />
 
                     <TextView
+                        android:id="@+id/txtStayingPeriod"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        tools:text="Staying Period"
+                        android:textSize="15sp" />
+
+                    <TextView
                         android:id="@+id/textView10"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
