--- a/app/src/main/res/layout/activity_all_order_history.xml
+++ b/app/src/main/res/layout/activity_all_order_history.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -59,24 +59,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+<!--                    <com.google.android.material.tabs.TabLayout-->
+<!--                        android:id="@+id/tabLayout"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent">-->
 
-                        <com.google.android.material.tabs.TabItem
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Active Order" />
+<!--                        <com.google.android.material.tabs.TabItem-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="Active Order" />-->
 
-                        <com.google.android.material.tabs.TabItem
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Past Order" />
+<!--                        <com.google.android.material.tabs.TabItem-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="Past Order" />-->
 
-                    </com.google.android.material.tabs.TabLayout>
+<!--                    </com.google.android.material.tabs.TabLayout>-->
 
                     <TextView
                         android:id="@+id/txtBookingID"
@@ -157,7 +157,6 @@
                         android:id="@+id/txtOrderStatus1"
                         android:layout_width="wrap_content"
                         android:layout_height="54dp"
-                        android:layout_marginTop="10dp"
                         android:layout_marginEnd="30dp"
                         android:paddingLeft="15sp"
                         android:paddingTop="15sp"
@@ -166,7 +165,7 @@
                         android:textColor="@color/teal_700"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:text="Order Status" />
 
                     <TextView
