--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -130,7 +130,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints=""
                         android:ems="10"
-                        android:inputType="textEmailAddress"
+                        android:inputType="text"
                         android:labelFor="@id/TextView8"
                         android:paddingLeft="15dp"
                         android:paddingTop="15dp"
