--- a/app/src/main/res/layout/activity_all_order_history.xml
+++ b/app/src/main/res/layout/activity_all_order_history.xml
@@ -90,109 +90,109 @@
                         android:paddingBottom="15sp"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+                        app:layout_constraintTop_toBottomOf="parent"
                         tools:text="Order ID" />
 
-                    <TextView
-                        android:id="@+id/txtOrderStatus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="54dp"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtBookingID"
-                        tools:text="Staying Period" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtOrderStatus"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="54dp"-->
+<!--                        android:layout_marginStart="30dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtBookingID"-->
+<!--                        tools:text="Staying Period" />-->
 
-                    <TextView
-                        android:id="@+id/txtCustName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus"
-                        tools:text="Customer Name" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtCustName"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="30dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus"-->
+<!--                        tools:text="Customer Name" />-->
 
-                    <TextView
-                        android:id="@+id/txtHandlePerson"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtRoomType"
-                        tools:text="Handle By Who" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtHandlePerson"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="30dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtRoomType"-->
+<!--                        tools:text="Handle By Who" />-->
 
-                    <TextView
-                        android:id="@+id/txtRoomType"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtCustName"
-                        tools:text="Room Type" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtRoomType"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="30dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtCustName"-->
+<!--                        tools:text="Room Type" />-->
 
-                    <TextView
-                        android:id="@+id/txtOrderStatus1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="54dp"
-                        android:layout_marginEnd="30dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textColor="@color/teal_700"
-                        android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="Order Status" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtOrderStatus1"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="54dp"-->
+<!--                        android:layout_marginEnd="30dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textColor="@color/teal_700"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        tools:text="Order Status" />-->
 
-                    <TextView
-                        android:id="@+id/txtTotalAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="54dp"
-                        android:layout_marginTop="136dp"
-                        android:layout_marginEnd="30dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus1"
-                        tools:text="Total Amount" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtTotalAmount"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="54dp"-->
+<!--                        android:layout_marginTop="136dp"-->
+<!--                        android:layout_marginEnd="30dp"-->
+<!--                        android:paddingLeft="15sp"-->
+<!--                        android:paddingTop="15sp"-->
+<!--                        android:paddingRight="15sp"-->
+<!--                        android:paddingBottom="15sp"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="18sp"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus1"-->
+<!--                        tools:text="Total Amount" />-->
 
-                    <ImageView
-                        android:id="@+id/imageView7"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="32dp"
-                        android:layout_marginEnd="28dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtTotalAmount"
-                        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageView7"-->
+<!--                        android:layout_width="30dp"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:layout_marginTop="32dp"-->
+<!--                        android:layout_marginEnd="28dp"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/txtTotalAmount"-->
+<!--                        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />-->
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
