--- a/app/src/main/res/layout/activity_check_in_confirmation.xml
+++ b/app/src/main/res/layout/activity_check_in_confirmation.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -58,6 +59,21 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="550dp">
+
+                   <!-- <TextView
+                        android:id="@+id/txtBookingID"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="30dp"
+                        android:paddingLeft="15sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="15sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="Order ID" />-->
 
                     <TextView
                         android:id="@+id/txtCustName"
@@ -196,7 +212,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/btnCheckOutRoomDetails"
+                            android:id="@+id/btnDone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="15dp"
@@ -207,7 +223,7 @@
                             android:paddingTop="15dp"
                             android:paddingRight="15dp"
                             android:paddingBottom="15dp"
-                            android:text="Confirm"
+                            android:text="Done"
                             android:textSize="18sp"
                             android:translationX="180dp"
                             android:translationY="20dp"
